--- a/.env
+++ b/.env
@@ -1,11 +1,10 @@
 SECRET_KEY=django-insecure-v4em8!ro@mh3z6b$i&3qh@u4u$4aazo75mob@07*ui^kgbr+3z
 EMAIL_HOST_USER=zizimash6@gmail.com
 EMAIL_HOST_PASSWORD=investmentbank01
-ALLOWED_HOSTS =['firstbank-investsmart-fb01b73cbf8c.herokuapp.com']
+ALLOWED_HOSTS =['firstbank-investsmart.onrender.com',]
 CORS_ALLOW_CREDENTIALS =True
-
 CORS_ALLOWED_ORIGINS =[
     "https://firstbank-investments.vercel.app",
-    "https://firstbank-investsmart-fb01b73cbf8c.herokuapp.com/api/"
+   'firstbank-investsmart.onrender.com',
 ]
 
