--- a/.env
+++ b/.env
@@ -5,3 +5,8 @@ ALLOWED_HOSTS=firstbank-investsmart.onrender.com
 CORS_ALLOW_CREDENTIALS=True
 CORS_ALLOWED_ORIGINS=https://firstbank-investments.vercel.app,https://firstbank-investsmart.onrender.com
 DATABASE_URL=postgresql://firstbank_backend_user:JCifURLx6v2M50mEslbr9lTwwTRLcwPR@dpg-csrfckl6l47c73fdqtfg-a/firstbank_backend
+DB_NAME=firstbank_backend
+DB_USER=firstbank_backend_user
+DB_PASSWORD=JCifURLx6v2M50mEslbr9lTwwTRLcwPR
+DB_HOST=dpg-csrfckl6l47c73fdqtfg-a
+DB_PORT=5432
