--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ EMAIL_HOST_PASSWORD=investmentbank01
 ALLOWED_HOSTS=firstbank-investsmart.onrender.com
 CORS_ALLOW_CREDENTIALS=True
 CORS_ALLOWED_ORIGINS=https://firstbank-investments.vercel.app,https://firstbank-investsmart.onrender.com
-DATABASE_URL=postgresql://firstbank-backend%20_owner:npg_smUr3FnA6Vok@ep-nameless-boat-a81f98br-pooler.eastus2.azure.neon.tech/firstbank-backend%20?sslmode=require
+DATABASE_URL=postgresql://firstbank-backend_owner:npg_smUr3FnA6Vok@ep-nameless-boat-a81f98br-pooler.eastus2.azure.neon.tech/firstbank-backend?sslmode=require
 DB_NAME=firstbank_backend
 DB_USER=firstbank_backend_user
 DB_PASSWORD=npg_smUr3FnA6Vok
